# aws-sso-credentials

./: AGENTS.md  Cargo.toml  DEVELOPMENT.md  LICENSE.txt  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml
.github/workflows/: AGENTS.md  check.yaml  release.yaml
Formula/: aws-sso-credentials.rb
apt/dists/stable/: Release
scripts/: aggregate-checksums.sh  build-apt-repo.sh  build-deb.sh  build-rpm.sh  build-yum-repo.sh  build.sh  checkout-gh-pages.sh  commit-formula.sh  commit-pages.sh  install-repo-tools.sh  output-version.sh  package-tarball.sh  source-sha256.sh  update-homebrew-formula.sh  write-pages-index.sh
src/: cache.rs  main.rs  profile.rs
yum/: aws-sso-credentials-0.1.0-1.aarch64.rpm  aws-sso-credentials-0.1.0-1.x86_64.rpm  aws-sso-credentials-0.1.0~alpha-1.aarch64.rpm  aws-sso-credentials-0.1.0~alpha-1.x86_64.rpm  aws-sso-credentials-0.2.0-1.aarch64.rpm  aws-sso-credentials-0.2.0-1.x86_64.rpm  aws-sso-credentials-0.3.0-1.aarch64.rpm  aws-sso-credentials-0.3.0-1.x86_64.rpm  aws-sso-credentials.repo  redo.repo
yum/repodata/: 2391ef837d248c0ff99f9be058942f07808ac0ce695b4e51702ecdaea7d55f59-filelists.sqlite.bz2  2ac2561c04dc2b73963baf74d3962e0753ba15b106542a0ca1a89166f301b3c1-primary.sqlite.bz2  3f2d96e07ffb78b7cdd727f01731453edcef22f3d37223c6814f0548ef9aa3b2-primary.sqlite.bz2  56fa93f13d3db11afb8639f8838bb3d98a8923bc8b4784521bb094f64a5199e6-other.sqlite.bz2  682af14eb6896d29f86bad42fa01c18590fa4d954f47c16511dfe85953d8d05e-other.sqlite.bz2  72ed44b0473b0429cb12bf7ef60207783330646aebdd7cf91843c8d0e2f44ec0-other.sqlite.bz2  repomd.xml  (+6 more)
(+10 files in other folders)
